internal/octogo/testdata/02_dynamic_allocation.ogo
import "p2"

func process() {
    // A fixed-capacity slice make is a compile-time-sized backing array, not a
    // heap allocation, so it is allowed on the P2.
    var buffer []int = make([]int, 0, 10)

    // ERROR "undeclared name: new|dynamic allocation not supported"
    ptr := new(int)

    _ = buffer
    _ = ptr
}
